# milestone

./: .clang_complete  .gitignore  Button.qml  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  Main.qml  Makefile  README.md  Subject.qml  Topic.qml  database.sql  export.sh  flashback.sql  http-server.py  main.cpp  milestone.sh
.github/workflows/: doxygen.yml  release.yml
cli-prototype/: io_stream.sh  milestone.sh
client/: BasicPage.qml  Board.qml  Box.cpp  Box.hpp  Box.qml  BoxModel.cpp  BoxModel.hpp  CMakeLists.txt  ControlButton.qml  Database.cpp  Database.hpp  Entry.cpp  Entry.hpp  Entry.qml  EntryList.cpp  EntryList.hpp  EntryView.qml  Frame.qml  Heading.qml  Login.qml  Main.qml  Note.cpp  Note.hpp  Note.qml  NoteList.qml  NoteModel.cpp  NoteModel.hpp  Page.qml  Paper.qml  Practice.cpp  Practice.hpp  PracticeModel.cpp  PracticeModel.hpp  Resource.qml  ResourceList.qml  Section.qml  SectionList.qml  Space.qml  SpaceControl.qml  SpaceMenu.qml  (+3 more)
client-cli/: CMakeLists.txt  README.md
client-cli/include/milestone/: client.hpp  database.hpp  exceptions.hpp  options.hpp  screen.hpp  screens.hpp  server.hpp  session.hpp
client-cli/src/: client.cpp  database.cpp  main.cpp  options.cpp  screen.cpp  screens.cpp  server.cpp  session.cpp
database/: create_resource.plsql  flashback.sql  notes.plsql  notes.sql  practice_queue.sql  practices.sql  references.plsql  references.sql  resources.plsql  resources.sql  search_resource.plsql  subjects.plsql  subjects.sql  topics.plsql  topics.sql
design/: actors.uml  add_notebook_activity.uml  author.uml  create-note.sql  create-practice.sql  create-resource.sql  database.sql  database.xml  diagrams.uml  functions.sql  get-user-practices.sql  get-user-studies.sql  index.html  modify.sql  notebook_class.uml  set-section-as-complete.sql  usecases.uml  users.sql
docs/: .readthedocs.yaml  activity.uml  conf.py  database.hpp  database_interface.hpp  database_structure.hpp  definitions.hpp  design.dox  design_overview.hpp  flashback_design.hpp  index.rst  interface.dox  interface.hpp  knowledge_design.hpp  mainpage.dox  mainpage.hpp  manual.dox  manual.hpp
flashback/: CMakeLists.txt
flashback/include/flashback/: block.hpp  flashback.hpp  note.hpp  note_block.hpp  practice.hpp  resource.hpp  section.hpp  subject.hpp  topic.hpp  types.hpp
flashback/src/: flashback.cpp  note_block.cpp
flashback/test/: flashback.cpp  note.cpp  resource.cpp
importer/: CMakeLists.txt
importer/include/flashback/: importer.hpp  record.hpp  store.hpp
importer/src/: importer.cpp  main.cpp  store.cpp
include/: argument-parser.hpp  book.hpp  card.hpp  loader.cpp  loader.hpp  note.hpp  practice.hpp  reference.hpp  resource-loader.hpp  resource.hpp
include/flashback/: argument_parser.hpp  book.hpp  collection.hpp  console.hpp  dashboard.hpp  flashcard.hpp  library.hpp  loader.hpp  markdown_book_builder.hpp  markdown_note_builder.hpp  markdown_resource_builder.hpp  menu.hpp  note.hpp  note_builder.hpp  note_transformer.hpp  practice.hpp  practice_collection.hpp  reference.hpp  resource.hpp  resource_builder.hpp  resource_loader.hpp  source.hpp  space.hpp  subject.hpp  subject_loader.hpp  topic.hpp  trainer.hpp  training.hpp  transformer.hpp  validator.hpp
practice-manager/: practice-manager
prototype/: .gitignore  CMakeLists.txt  README.md  design.html  flashback  io_stream.sh  main.c  milestone.sh  practice-manager
prototype/gui/: .gitignore  Makefile  mainwindow.cpp  mainwindow.hpp  practice-manager-gui.cpp  practice-manager-gui.pro
prototype/static/: roadmap  subject
scripts/: extend.sh  flashback  importer  importer.sh  records.sh
server/: CMakeLists.txt  queries.sql
server/include/flashback/: options.hpp  server.hpp
server/src/: main.cpp  options.cpp  server.cpp
server/test/: main.cpp  options.cpp  server.cpp
share/css/: ajax.html  bootstrap.html  breadcrumb.css  darkmode.css  general.css  list-group.css  octicon.css  pager.css  prism-overrides.css  prism.html  settings.css
share/js/: bootstrap.html  darkmode.js  fontsize.js  jquery.html  list-group.js  prism.html  scroll-listener.js  settings.html  settings.js
share/js/syntax/: asm6502.html  aspnet.html  bash.html  c.html  cmake.html  cpp.html  csharp.html  django.html  dns-zone.html  docker.html  go.html  hcl.html  ignore.html  java.html  javadoc.html  json.html  json5.html  kotlin.html  latex.html  makefile.html  markdown.html  matlab.html  mongodb.html  nasm.html  nginx.html  objectivec.html  opencl.html  perl.html  php.html  phpdoc.html  plsql.html  powershell.html  processing.html  prolog.html  python.html  qml.html  r.html  regex.html  ruby.html  rust.html  (+8 more)
src/: argument-parser.cpp  argument_parser.cpp  book.cpp  card.cpp  console.cpp  dashboard.cpp  flashcard.cpp  library.cpp  loader.cpp  main.cpp  markdown_book_builder.cpp  markdown_note_builder.cpp  markdown_resource_builder.cpp  menu.cpp  note.cpp  note_transformer.cpp  practice.cpp  practice_collection.cpp  reference.cpp  resource-loader.cpp  resource_loader.cpp  source.cpp  subject.cpp  subject_loader.cpp  topic.cpp  trainer.cpp  training.cpp  validator.cpp
test/: book.cpp  dashboard.cpp  library.cpp  loader.cpp  markdown_book_builder.cpp  markdown_note_builder.cpp  markdown_resource_builder.cpp  menu.cpp  note.cpp  practice.cpp  resource-loader.cpp  resource_loader.cpp  test-common.cpp  test-validator.cpp
ui/: dashboard.ui
