file(GLOB test_files RELATIVE_PATH ${CMAKE_CURRENT_SOURCE_DIR} test/*.cpp)
add_executable(test-flashback EXCLUDE_FROM_ALL ${test_files})
target_link_libraries(test-flashback PUBLIC gtest gtest_main)
target_include_directories(test-flashback PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_definitions(test-flashback PUBLIC PROGRAM_VERSION=${CMAKE_PROJECT_VERSION})
add_test(NAME test-flashback COMMAND test-flashback)
